--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -432,6 +432,58 @@
  civic_tooltip_tec_ai_cult_effects:0 "TO DO.\nAfter the empire obtains the robotic workers technology, Divination Cores wil provide 0r4cle jobs, enhanced administrators (or priests) which also provide processing capacity, but are only available to cybernetic units of any type for employment.\n\nAI Authority Empires: 0r4cles also provide extra AI capacity.\n\n"
 
 # --------------- Hive
+ civic_tec_hive_environmental_synergism:0 "Environmental Synergism"
+ civic_tec_hive_environmental_synergism_desc:0 "TO DO"
+ civic_tooltip_tec_hive_environmental_synergism_effects:0 "£district£ Habitation districts increase by §G3§! the $tec_loc_planet_capacity$, regardless of the environment.\nAdditionally, £job£ jobs related to the inhabited Climate will boost $tec_loc_habitability$ by §Y0.5%§!, §Y1§! extra $tec_loc_planet_capacity$ on §HPerfect§! or §HArcology§! planets.\n\n"
+
+ civic_tec_hive_industrial_synergism:0 "TO DO"
+ civic_tec_hive_industrial_synergism_desc:0 "TO DO"
+ civic_tooltip_tec_hive_industrial_synergism_effects:0 "TO DO.\n\n"
+
+ civic_tec_hive_agrarian_synergism:0 "Natural Moulders"
+ civic_tec_hive_agrarian_synergism_desc:0 "TO DO"
+ civic_tooltip_tec_hive_agrarian_synergism_effects:0 "TO DO.\n£job_agri_drone£ $job_agri_drone_plural$ (and alike) increase §Y$tec_loc_planet_build_speed$§! by §G2.5%§! each.\n\n"
+
+ civic_tec_hive_lithic_synergism:0 "Natural Moulders"
+ civic_tec_hive_lithic_synergism_desc:0 "TO DO"
+ civic_tooltip_tec_hive_lithic_synergism_effects:0 "TO DO.\n£job_mining_drone£ $job_mining_drone_plural$ (and alike)  increase §Y$tec_loc_planet_build_speed$§! by §G2.5%§! each.\n\n"
+
+
+ civic_tec_hive_planet_ravagers:0 "Ravaging Influx"
+ civic_tec_hive_planet_ravagers_desc:0 "TO DO"
+ civic_tooltip_tec_hive_planet_ravagers_effects:0 "This collective exhaust any colonized world, making it become §YDepleted§! over time, providing great £job£ §YProduction§! and £pop£ §YPop Generation§! bonuses to the collective until it is rendered near completely §YUninhabitable§!.\nDepleted planets have an immense additional $mod_terraforming_cost_mult$.\n\n"
+
+ civic_tec_hive_zealots:0 "Unitologist Chorus"
+ civic_tec_hive_zealots_desc:0 "TO DO"
+ civic_tooltip_tec_hive_zealots_effects:0 "TO DO"
+
+
+ civic_tec_hive_overminds:0 "Subservient Overminds"
+ civic_tec_hive_overminds_desc:0 "This collective derivates a relatively high amount of control power to specificially control drones, which have the task to control all the lesser ones at a planetary scale. Generally this produces a remarked separation between castes of drones, conforming a strong but diversified collective."
+ civic_tooltip_tec_hive_overminds_effects:0 "£building£ §YCapital Buildings§! replace some £job_synapse_drone£ £job_tec_network_drone£ Unity §YDrone§! jobs with £job_tec_overmind_drone£ §Y$job_tec_overmind_drone_plural$§!, which belong to a special drone category, §YBrood Drones§!.\n- $job_tec_overmind_drone_effect_desc$\n\n£job_patrol_drone£ §YAnti-Crime§! drones are twice as effective at reducing £crime£ §YDeviancy§!.\n\n"
+	# Protominds boost a central Overmind
+
+ civic_tec_hive_cybernetic_overmind:0 "Subservient Adjutants"
+ civic_tec_hive_cybernetic_overmind_desc:0 "TO DO"
+ civic_tooltip_tec_hive_cybernetic_overmind_effects:0 "TO DO"
+	# Adjutant jobs boost a central drone
+
+
+# --------------- Cyberhives
+ civic_tec_hive_cybercluster_network:0 "Network Clusters"
+ civic_tec_hive_cybercluster_network_desc:0 "TO DO"
+ civic_tooltip_tec_hive_cybercluster_network_effects:0 "TO DO"
+
+ civic_tec_hive_cybercluster_production:0 "Proficiency Clusters"
+ civic_tec_hive_cybercluster_production_desc:0 "TO DO"
+ civic_tooltip_tec_hive_cybercluster_network_effects:0 "TO DO"
+
+ civic_tec_hive_cybercluster_construction:0 "Network Clusters"
+ civic_tec_hive_cybercluster_construction_desc:0 "TO DO"
+ civic_tooltip_tec_hive_cybercluster_construction_effects:0 "TO DO"
+
+
+# --------------- Biohive inspired
  civic_tec_hive_mycus_cultivators:0 "Mycetal Cultivators"
  civic_tec_hive_mycus_cultivators_desc:0 "To do"
  civic_tooltip_tec_hive_mycus_cultivators_effects:0 "Allows the construction of Nascent Megamycete buildings, which will grow automatically over time providing the planet special bonuses with each stage, like menial district slots.\nPlanets with a Developed Megamycete will be able to build Mycus Growths, Amalgam and Network buildings, which are alternative semi-automated versions of existing buildings, and will be improved by further Megamycete stages.\n\n"
@@ -440,17 +492,6 @@
  civic_tec_hive_environmental_synergism_desc:0 "To do"
  civic_tooltip_tec_hive_environmental_synergism_effects:0 "£district£ Hive districts (or alternatives) increase by 3 the Planet Capacity, regardless of the environment.\nAdditionally, jobs related to the inhabited Climate will boost habitability by 0.5%, and 1 extra Planet Capacity on Perfect or Arcology planets.\n\n"
 
- civic_tec_hive_industrial_synergism:0 "TO DO"
- civic_tec_hive_industrial_synergism_desc:0 "To do"
- civic_tooltip_tec_hive_industrial_synergism_effects:0 "TO DO.\n\n"
-
- civic_tec_hive_zealots:0 "Unitologist Chorus"
- civic_tec_hive_zealots_desc:0 "TO DO"
- civic_tooltip_tec_hive_zealots_effects:0 "TO DO"
-
- civic_tec_hive_cyberclusters:0 "Network Clusters"
- civic_tec_hive_cyberclusters_desc:0 "TO DO"
- civic_tooltip_tec_hive_cyberclusters_effects:0 "TO DO"
 
 
 
@@ -747,6 +788,7 @@
 # /
 
 # ------------------------------------------------- TRAITS
+# Organic
  trait_tec_lithotrophic:0 "Lithotrophic"
  trait_tec_lithotrophic_desc:0 "§LThis species evolved from organisms able to consume inorganic substrate and materials in order to suit metabolic needs. While now they can adapt their diet to any kind of substance, this led to incredible survival and endurance capabilities.§!"
  TRAIT_TEC_LITOTROPHIC_EFFECT:0 "£pop£ Species £food£ Food Upkeep: §G-0.5§!\n£pop£ Species £minerals£ Minerals Upkeep: §R+0.5§!"
@@ -755,9 +797,35 @@
  trait_tec_unity_eater_desc:0 "§LThis species has a specific need of psychic nourishment complimentary to its organic needs, manifesting in the consumption of redundant thoughts, feelings or what some may call ''psychic'' aura.§!"
  TRAIT_TEC_UNITY_EATER_EFFECT:0 "£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §G-50%§!\n£pop£ Pop £unity£ Unity Upkeep: §R+0.5§!"
 
+ trait_tec_spore_growth:0 "Sporal Germination"
+ trait_tec_spore_growth_desc:0 "§LTO DO§!"
+ TRAIT_TEC_SPORE_GROWTH_EFFECT:0 "Each pop working as a slave or better produces §G0.02§! £mod_pop_growth_speed£ §YPop Growth§!.\n\nThis stacks with natural §HOrganic Pop Growth§!."
+
+ trait_tec_twin_growth:0 "Dual Gametoids"
+ trait_tec_twin_growth_desc:0 "§LTO DO§!"
+ TRAIT_TEC_TWIN_GROWTH_EFFECT:0 "Each time a pop of this species is generated, there is a §G15%§! chance of another pop being £mod_pop_growth_speed£ §GGenerated§!."
+
+
+# Robotic
  trait_tec_robot_deployment:0 "Modular Deployment"
  trait_tec_robot_deployment_desc:0 "§Likea?§!"
  TRAIT_TEC_ROBOT_DEPLOYMENT_EFFECT:0 "New colonies will gain §Y1§! additional £pop£ Pop.\nPop Housing usage: §G-10%§!"
+
+ trait_tec_robot_buildingspeed:0 "Structural Assemblers"
+ trait_tec_robot_buildingspeed_desc:0 "§LTO DO§!"
+ trait_tec_robot_buildingspeed_effect:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1.5%§!\n"
+
+ trait_tec_robot_good_processing:0 "Interdependent Depuration"
+ trait_tec_robot_good_processing_desc:0 "§Likea?§!"
+ trait_tec_robot_good_processing_effect:0 "TO DO"
+
+ trait_tec_robot_bad_processing:0 "Reiterative Depuration"
+ trait_tec_robot_bad_processing_desc:0 "§Likea?§!"
+ trait_tec_robot_bad_processing_effect:0 "TO DO"
+
+ trait_tec_robot_todo:0 "Modular Deployment"
+ trait_tec_robot_todo_desc:0 "§Likea?§!"
+ TRAIT_TEC_ROBOT_todo_EFFECT:0 "New colonies will gain §Y1§! additional £pop£ Pop.\nPop Housing usage: §G-10%§!"
 
 # --------------- BIOLOGICAL PATH TRAITS ----------------------
 # xenotransplantation
