--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -61,6 +61,9 @@
  tec_loc_job_output:0 "$mod_planet_jobs_produces_mult$"
 
  tec_loc_habitability:0 "£mod_habitability_floor_add£ Habitability"
+ tec_loc_planet_capacity:0 "£mod_planet_carry_cap_add£ $CARRY_CAP$"
+ tec_loc_planet_build_speed:0 "£mod_planet_building_build_speed_mult£ $MOD_PLANET_BUILDING_BUILD_SPEED_MULT$"
+
  tec_loc_terraform_speed:0 "£mod_country_terraform_speed_mult£ $MOD_COUNTRY_TERRAFORM_SPEED_MULT$"
 
  tec_loc_capital_tier:0 "£building£ Capital Tier"
