--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -801,7 +801,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  tec_trait_replicant_module_industrial:0 "$trait_tec_cybernetic_module_industrial$"
  tec_trait_replicant_submodule_upgraded:0 "Habitability: §G+100%§!\nReplicant traits are §EUpgraded§!\n§RCannot reproduce naturally§!\n§GImmortal§!"
  tec_trait_replicant_submodule_standard:0 "Habitability: §G+80%§!\n§GImmortal§!"
- tec_trait_replicant_submodule_combined:0 "Habitability: §G+80%§!\nPop Growth and Assembly Speed: §G+25%§!\nReplicant trait cost: §G-1§!\n§GImmortal§!"
+ tec_trait_replicant_submodule_combined:0 "Habitability: §G+60%§!\nPop Growth and Assembly Speed: §G+25%§!\nReplicant trait cost: §G-1§!"
 
 
  # Basic traits
@@ -938,6 +938,11 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
 # --------------- PSIONIC ASCENSION TRAITS ----------------------
 # PSIONIC T3
+ trait_tec_covenant_strands:0 "§MEmpowered by the Composer of Strands§!"
+ trait_tec_covenant_eater:0 "§MEmpowered by the Eater of Worlds§!"
+ trait_tec_covenant_whispers:0 "§MEmpowered by the Whispers in the Void§!"
+ trait_tec_covenant_desire:0 "§MEmpowered by the Instrument of Desire§!"
+ trait_tec_covenant_many:0 "§MEmpowered by the Will of the Many§!"
 
 	# Replaces 
  trait_tec_psionic_body:0 "Infused Body"
@@ -1042,7 +1047,7 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
  trait_tec_biopsionic_secondary_module_fallback:0 "$mod_planet_pops_upkeep_mult$: §G-15%§!\n"
  trait_tec_biopsionic_secondary_module_upkeep:0 "$mod_planet_jobs_upkeep_mult$: §G-10%§!\n"
- trait_tec_biopsionic_secondary_module_amenities:0 "$mod_pop_amenities_usage_mult$: §G-15%§!\n"
+ trait_tec_biopsionic_secondary_module_amenities:0 "$MOD_POP_AMENITIES_USAGE_BASE$: §G-15%§!\n"
 
  trait_tec_biopsionic_leader_module_fallback:0 "\n§GImmortal§!"
 
