--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -619,6 +619,29 @@
 	tr_tec_reestructure_final_3_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_artifice_final_3_text$"
 	tr_tec_reestructure_final_3_disabled_delayed:0 "$tr_tec_artifice_final_3_delayed$"
 
+
+# Ecology
+# ------------------------------------------------------------
+ tradition_tec_ecology:0 "Sustainability"
+ tradition_tec_ecology_desc:0 "Boundaries are no more, and limits are idealized ideals, so our grasp, our thoughts, must be put in what lies beyond."
+
+ tr_tec_ecology_adopt:0 "Sustainability"
+ tr_tec_ecology_adopt_tooltip:7 "TO DO.\n"
+
+ tr_tec_ecology_finish:0 "Sustainability Traditions Finished"
+ tr_tec_ecology_finish_tooltip:4 "TO DO\n"
+ tr_tec_ecology_finish_effect:4 ""
+
+	# City districts provide 1 agri/mining job
+ tr_tec_ecology_1:0 "Habitational Gardening"
+ tr_tec_ecology_1_tooltip:0 "TO DO."
+ tr_tec_ecology_1_delayed:0 "TO DO."
+
+ tr_tec_ecology_1_lithoid:0 "Habitational Geodification"
+ tr_tec_ecology_1_lithoid_tooltip:0 "TO DO."
+ tr_tec_ecology_1_lithoid_delayed:0 "TO DO."
+
+
 # --------------------------- ASCENSION T1 --------------------------------
 # Biological Mutation (B)
 # ------------------------------------------------------------
