Capital fixed for faith fed, budding like trait refactor and performance optimization.

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -1282,11 +1282,14 @@ tech_reverse_advanced_dome: " "
  situation_approach_tec_replicant_path_t2_notech_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research both £physics£ §Y$tech_neuro_quantum_links$§! and £society£ §Y$tech_gene_tailoring$§! technologies to continue."
 
  situation_approach_tec_replicant_path_t2_slow:0 "Procedural Augmentation"
- situation_approach_tec_replicant_path_t2_slow_tooltip:0 "" # TO DO
+ situation_approach_tec_replicant_path_t2_slow_tooltip:0 "" 
+# TO DO
  situation_approach_tec_replicant_path_t2_neutral:0 "Standard Augmentation"
- situation_approach_tec_replicant_path_t2_neutral_tooltip:0 "TO DO" # TO DO
+ situation_approach_tec_replicant_path_t2_neutral_tooltip:0 "TO DO" 
+# TO DO
  situation_approach_tec_replicant_path_t2_fast:0 "Accelerated Augmentation"
- situation_approach_tec_replicant_path_t2_fast_tooltip:0 "" # TO DO
+ situation_approach_tec_replicant_path_t2_fast_tooltip:0 ""
+# TO DO
 
  situation_string_tec_replicant_path_t2_neutral:0 "$situation_approach_tec_replicant_path_t2_neutral$"
  situation_string_tec_replicant_path_t2_slow:0 "$situation_approach_tec_replicant_path_t2_slow$"
@@ -1311,11 +1314,14 @@ tech_reverse_advanced_dome: " "
  situation_approach_tec_biopsionic_path_t2_notech:0 "Lacking Technology"
  situation_approach_tec_biopsionic_path_t2_notech_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research both £society£ §Y$tech_gene_tailoring$§! and £society£ §Y$tech_psionic_theory$§! technologies to continue."
  situation_approach_tec_biopsionic_path_t2_psionics:0 "Mind Focus"
- situation_approach_tec_biopsionic_path_t2_psionics_tooltip:0 "" # TO DO
+ situation_approach_tec_biopsionic_path_t2_psionics_tooltip:0 "" 
+# TO DO
  situation_approach_tec_biopsionic_path_t2_neutral:0 "Stoic Discovery"
- situation_approach_tec_biopsionic_path_t2_neutral_tooltip:0 "" # TO DO
+ situation_approach_tec_biopsionic_path_t2_neutral_tooltip:0 "" 
+# TO DO
  situation_approach_tec_biopsionic_path_t2_genetics:0 "Form Focus"
- situation_approach_tec_biopsionic_path_t2_genetics_tooltip:0 "" # TO DO
+ situation_approach_tec_biopsionic_path_t2_genetics_tooltip:0 "" 
+# TO DO
  situation_approach_tec_biopsionic_path_t2_nozro:0 "Zro Studies"
  situation_approach_tec_biopsionic_path_t2_nozro_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research the £society£ §Y$tech_mine_zro$§! technology to continue."
 
@@ -1368,11 +1374,14 @@ tech_reverse_advanced_dome: " "
  situation_approach_tec_cyberpsionic_path_t2_notech_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research both £physics£ §Y$tech_neuro_quantum_links$§! and £society£ §Y$tech_psionic_theory$§! technologies to continue."
 
  situation_approach_tec_cyberpsionic_path_t2_slow:0 "Stable Blueprints"
- situation_approach_tec_cyberpsionic_path_t2_slow_tooltip:0 "" # TO DO
+ situation_approach_tec_cyberpsionic_path_t2_slow_tooltip:0 "" 
+# TO DO
  situation_approach_tec_cyberpsionic_path_t2_neutral:0 "Initial Concepts"
- situation_approach_tec_cyberpsionic_path_t2_neutral_tooltip:0 "" # TO DO
+ situation_approach_tec_cyberpsionic_path_t2_neutral_tooltip:0 "" 
+# TO DO
  situation_approach_tec_cyberpsionic_path_t2_fast:0 "Accelerated Blueprints"
- situation_approach_tec_cyberpsionic_path_t2_fast_tooltip:0 "" # TO DO
+ situation_approach_tec_cyberpsionic_path_t2_fast_tooltip:0 "" 
+# TO DO
  situation_approach_tec_cyberpsionic_path_t2_nozro:0 "Infusion Research"
  situation_approach_tec_cyberpsionic_path_t2_nozro_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research the £society£ §Y$tech_mine_zro$§! technology to continue."
 
