--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3716,6 +3716,11 @@ mod_tec_assembly_prohibited_no_cyborg_short: ""
 mod_tec_assembly_prohibited_no_hive: "§RNo $tec_loc_biological_assembly$ provided as assembling species is not Hive Minded§!"
 mod_tec_assembly_prohibited_no_hive_short: ""
 
+# Self-assembly
+mod_tec_pop_self_assembly_organic_add: "Monthly Organic Pop Assembly per Pop"
+mod_tec_pop_self_assembly_add: "Monthly Mechanical Pop Assembly Per Pop"
+
+
 # Admin locs
 
 job_tec_mecha_priest_icon: "£job_tec_mecha_priest£"
