Prototype of pop upkeeps and resources rework

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3717,9 +3717,20 @@ mod_tec_assembly_prohibited_no_hive: "§RNo $tec_loc_biological_assembly$ provid
 mod_tec_assembly_prohibited_no_hive_short: ""
 
 # Self-assembly
-mod_tec_pop_self_assembly_organic_add: "Monthly Organic Pop Assembly per Pop"
-mod_tec_pop_self_assembly_add: "Monthly Mechanical Pop Assembly Per Pop"
+mod_tec_pop_self_assembly_organic_add: "Monthly Organic Pop Assembly From Pop"
+mod_tec_pop_self_assembly_add: "Monthly Mechanical Pop Assembly From Pop"
 
+# Pop Upkeeps
+
+
+mod_tec_pop_main_upkeep_weight_add: "£pop£ Pop [GetBaseUpkeep] Upkeep Weight"
+mod_tec_pop_food_upkeep_weight_add: "£pop£ Pop £food£ $food$ Upkeep Weight"
+mod_tec_pop_minerals_upkeep_weight_add: "£pop£ Pop £mienrals£ $mienrals$ Upkeep Weight"
+mod_tec_pop_energy_upkeep_weight_add: "£pop£ Pop £energy£ $energy$ Upkeep Weight"
+mod_tec_pop_food_upkeep_ignore_weight_add: "£pop£ Pop £food£ $food$ Free Upkeep Weight"
+mod_tec_pop_minerals_upkeep_ignore_weight_add: "£pop£ Pop £mienrals£ $mienrals$ Free Upkeep Weight"
+mod_tec_pop_energy_upkeep_ignore_weight_add: "£pop£ Pop £energy£ $energy$ Free Upkeep Weight"
+mod_tec_pop_upkeep_base_add: "Base £pop£ Pop Upkeep"
 
 # Admin locs
 
