--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -390,7 +390,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # former civic_welfare_state
  civic_tec_social_prosperity:0 "Social Prosperity"
  civic_tec_social_prosperity_desc:0 "In this society the State traditionally plays a key role in the protection and promotion of the economic and social well-being of its citizens."
- civic_tooltip_tec_social_prosperity_effects:0 "Every non-enslaved sentient pop will generate §G0.5§! £unity£ §YUnity§! and §G0.25§! £trade_value£ §YTrade value§! having extra §R0.25§! £consumer_goods£ §YConsumer Goods§! upkeep.\n\nUnemployed pops will have extra £happiness£ §YHappiness§!.\n\nReduced Minimal Wage, Private Healthcare and Private Education policies are disabled.\n\n$tec_loc_amenities$ from £pop_cat_ruler£ Rulers: §G+2§!"
+ civic_tooltip_tec_social_prosperity_effects:0 "Unemployed pops will have extra £happiness£ §YHappiness§!.\n\nReduced Minimal Wage, Private Healthcare and Private Education policies are disabled.\n\n$tec_loc_amenities$ from £pop_cat_ruler£ Rulers: §G+2§!"
 
  # former civic_isolationism
  civic_tec_secured_domain:0 "Secured Domain"
