--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1189,27 +1189,27 @@ policy_goods_policy:0 "Consumer Goods Production"
 
  tec_no_overclock_name:0 "No Overclock"
  no_drone_overclock:0 "No Overclock"
- no_drone_overclock_desc:0 "No increased consumption, no increased production.\n\n§EAll £pop_cat_complex_drone£ Drones will have a normal upkeep and production.§!"
+ no_drone_overclock_desc:0 "No increased consumption, no increased production."
 
  tec_mid_overclock_name:0 "Mid Overclock"
  mid_drone_overclock:0 "Mid Overclock"
- mid_drone_overclock_desc:0 "We can add a little energy boost to all units in order to increase their processing capacity.\n\n§EAll  machine drones and cyborgs will consume §R0.25§! extra £energy£ Energy and produce §Y0.25§! £trigger_tec_research£ Research.§!"
+ mid_drone_overclock_desc:0 "We can add a little energy boost to all units in order to increase their processing capacity."
 
  tec_max_overclock_name:0 "Max Overclock"
  large_drone_overclock:0 "Max Overclock"
- large_drone_overclock_desc:0 "By providing large amounts of energy in a safe spectrum we will make all our units to magnify their processing capacity.\n\n§EAll machine drones and cyborgs will consume §R0.5§! extra £energy£ Energy and produce §Y0.5§! £trigger_tec_research£ Research.§!"
+ large_drone_overclock_desc:0 "By providing large amounts of energy in a safe spectrum we will make all our units to magnify their processing capacity."
 
  tec_low_overclock_hive_name:0 "Low Overclock"
  low_drone_overclock_hive:0 "Low Overclock"
- low_drone_overclock_hive_desc:0 "We can add a little energy boost to all units in order to increase their processing capacity.\n\n§EAll £pop_cat_complex_drone£ Drones will consume §R0.5§! extra £energy£ Energy and produce §Y2.5%§! more resources.§!"
+ low_drone_overclock_hive_desc:0 "We can add a little energy boost to all units in order to increase their processing capacity."
 
  tec_mid_overclock_hive_name:0 "Mid Overclock"
  mid_drone_overclock_hive:0 "Mid Overclock"
- mid_drone_overclock_hive_desc:0 "We can add a moderate energy boost to all units in order to increase their processing capacity.\n\n§EAll £pop_cat_complex_drone£ Drones will consume §R1§! extra £energy£ Energy and produce §Y5%§! more resources.§!"
+ mid_drone_overclock_hive_desc:0 "We can add a moderate energy boost to all units in order to increase their processing capacity."
 
  tec_max_overclock_hive_name:0 "Max Overclock"
  large_drone_overclock_hive:0 "Max Overclock"
- large_drone_overclock_hive_desc:0 "By providing large amounts of energy in a safe spectrum we will make all our units to magnify their processing capacity.\n\n§EAll £pop_cat_complex_drone£ Drones will consume §R2§! extra £energy£ Energy and produce §Y10%§! more resources.§!"
+ large_drone_overclock_hive_desc:0 "By providing large amounts of energy in a safe spectrum we will make all our units to magnify their processing capacity."
 
 # /
 
