--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -411,7 +411,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 # Reduce habitability ceiling - produces exotic gases
  trait_tec_robot_noxious:0 "Toxic Emissions"
  trait_tec_robot_noxious_desc:0 "§LThe internal processors of these robotic units create a dense, noxious and corroding gas as byproduct of energy transference; while safer in low degrees of emission, a high concentration of units creates uninhabitable toxic environments.§!\n"
- TRAIT_TEC_ROBOT_NOXIOUS_EFFECT:1 "Each pop working as a slave or better produces §G0.075§! £exotic_gases£ §Y$exotic_gases$§! per month.\nEach pop reduces the planet £mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_CEIL$§! by §R1%§!."
+ TRAIT_TEC_ROBOT_NOXIOUS_EFFECT:1 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_CEIL$§! from Pop: §R-1%§!"
 
  trait_tec_robot_nuclear:0 "Radiation Scrubbers"
  trait_tec_robot_nuclear_desc:0 "§LWith internal and external equipment to absorb, reprocess and reuse environmental radiation, these units were designed to survive in the harshest condition.§!\n"
@@ -591,7 +591,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  #trait_mol_shell_desc:0 "§LA thick layer of solid material encases some parts or the whole body of this species, making a excellent defensive barrier against attackers, making every member a kind of slow mobile fortress.§!"
  trait_tec_siliceous:0 "Siliceous Molt"
  trait_tec_siliceous_desc:0 "§LBy chemical processing of inert material, this species segregate hardened mineral substances used for different ways of protection or general corporeal composition.§!"
- TRAIT_TEC_SILICEOUS_EFFECT:0 "$mod_planet_pops_minerals_produces_add$: §G+0.15§!\n\n§EMolluscoid§! species also gain §G+15%§! Defense Army Health."
+ TRAIT_TEC_SILICEOUS_EFFECT:0 "§EMolluscoid§! $MOD_POP_HOUSING_USAGE_MULT$: §G-10%§!"
 
  trait_mol_social:0 "A"
  trait_mol_social_desc:0 "§La.§!"
@@ -620,7 +620,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 # Lithoid
  trait_tec_lithophytic:0 "Lithophytic Symbiosis"
  trait_tec_lithophytic_desc:0 "§LThis Lithoid species has a deep symbiotic relation with diverse mycelial and vegetal lifeforms, allowing the mutual benefit of protection and nourishment.§!"
- TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "$mod_planet_pops_food_produces_add$: §G+0.15§!\n\nIf a §EPlantoid§! species exist on the planet, this Lithoid species also gain §G-10%§! Upkeep."
+ TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "§EPlantoid§! $mod_planet_pops_upkeep_mult$: §G-10%§!"
 
 
 
@@ -676,7 +676,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
 # --------------- CYBORG ASCENSION TRAITS ----------------------
 # New cyborg
- mod_trait_tec_cybernetic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2]Replaces half the species upkeep with £pop£ §YEnergy§![trait_tec_cybernetic_leader_block]"
+ mod_trait_tec_cybernetic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
 
  # tec_blank
  trait_tec_cybernetic_module_fallback:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
@@ -793,7 +793,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  TRAIT_TEC_REPLICANT_LASTGEN_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
 
 # cyb cyb cyb
- mod_trait_tec_replicant_main_tooltip:0 "[tec_trait_replicant_module_block][trait_tec_replicant_cybernetic_submodule_block_1][tec_trait_replicant_submodule_block]\nReplaces half the species upkeep with £pop£ §YEnergy§!"
+ mod_trait_tec_replicant_main_tooltip:0 "[tec_trait_replicant_module_block][trait_tec_replicant_cybernetic_submodule_block_1][tec_trait_replicant_submodule_block]"
 
  tec_trait_replicant_module_fallback:0 "$trait_tec_cybernetic_module_versatility$"
  tec_trait_replicant_module_versatility:0 "$trait_tec_cybernetic_module_versatility$"
@@ -1103,7 +1103,7 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  # 25 years lifespan
  # psionic produces mult
  # leader thingie
- mod_trait_tec_cyberpsionic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1]Replaces half the species upkeep with £pop£ §YEnergy§![trait_tec_cybernetic_leader_block]"
+ mod_trait_tec_cyberpsionic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1][trait_tec_cybernetic_leader_block]"
 # 
  trait_tec_cyberpsionic_module_fallback:0 "$mod_planet_psionic_jobs_produces_mult$: §G+10%§!\n"
  trait_tec_cyberpsionic_module_entropy:0 "$mod_planet_psionic_jobs_produces_mult$: §G+15%§!\n$tec_loc_pop_growth$ and $tec_loc_biological_assembly$: §R-5%§!\n"
