--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -293,9 +293,40 @@
  START_SCREEN_ORIGIN_TEC_SHIELDWORLD:0 "TO DO"
 
 # --------------- Origin civics 
+ gov_tec_fanatic_purrifiers:0 "Felinic Purrifiers"
+ gov_tec_fanatic_purrifiers_desc:0 "Twhis gowernment is a form of rabidly purrfect and xenophouwic feline species technowcratic oligarchy, consecrated to detect and eradicate any kind of lesser species, extermiaunating them without remiaurse."
+
+
+# --------------- Origin civics 
  civic_tec_bioshapers_fleshcrafters:0 "Flesh Crafters"
  civic_tec_bioshapers_fleshcrafters_desc:0 "TO DO"
  civic_tec_bioshapers_fleshcrafters_tooltip:0 "TO DO"
+
+
+
+ civic_tec_ascension_synthetic:0 "Precocious Transubstantiation"
+ civic_tec_ascension_synthetic_desc:0 "TO DO"
+ civic_tec_ascension_synthetic_tooltip:0 "§EInitial $ap_synthetic_evolution$ Civic§!\n\nTO DO"
+
+ civic_tec_ascension_replicants:0 "Transorganic Inventive"
+ civic_tec_ascension_replicants_desc:0 "TO DO"
+ civic_tec_ascension_replicants_tooltip:0 "§EInitial $ap_tec_replicant$ Ascension Civic§!\n\nTO DO"
+
+ civic_tec_ascension_cybernetic:0 "Premature Augmentation"
+ civic_tec_ascension_cybernetic_desc:0 "TO DO"
+ civic_tec_ascension_cybernetic_tooltip:0 "§EInitial $ap_tec_cybernetic_revolution$ Civic§!\n\nTO DO"
+
+ civic_tec_ascension_genetic:0 "Attempted Perfection"
+ civic_tec_ascension_genetic_desc:0 "TO DO"
+ civic_tec_ascension_genetic_tooltip:0 "§EInitial $ap_tec_genetic_perfection$ Civic§!\n\nTO DO"
+
+ civic_tec_ascension_biological:0 "Mutagenetic Biology"
+ civic_tec_ascension_biological_desc:0 "TO DO"
+ civic_tec_ascension_biological_tooltip:0 "§EInitial $ap_tec_biological_2$ Civic§!\n\nTO DO"
+
+ civic_tec_ascension_psionic:0 "Everexpanding Minds"
+ civic_tec_ascension_psionic_desc:0 "TO DO"
+ civic_tec_ascension_psionic_tooltip:0 "§EInitial $ap_tec_psionic_ascendance$ Civic§!\n\nTO DO"
 
 # --------------- Regular civics
  civic_tec_spiritualist_eras:0 "Eras of Contemplation"
@@ -811,21 +842,57 @@
  trait_tec_robot_deployment_desc:0 "§Likea?§!"
  TRAIT_TEC_ROBOT_DEPLOYMENT_EFFECT:0 "New colonies will gain §Y1§! additional £pop£ Pop.\nPop Housing usage: §G-10%§!"
 
- trait_tec_robot_buildingspeed:0 "Structural Assemblers"
- trait_tec_robot_buildingspeed_desc:0 "§LTO DO§!"
- trait_tec_robot_buildingspeed_effect:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1.5%§!\n"
+ trait_tec_robot_builders:0 "Micro-Assemblers"
+ trait_tec_robot_builders_desc:0 "§LTO DO§!"
+ trait_tec_robot_builders_effect:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1.5%§!\n"
+
+ trait_tec_robot_megastructural:0 "Kilostructuractors"
+ trait_tec_robot_megastructural_desc:0 "§LTO DO§!"
+ trait_tec_robot_megastructural_effect:0 "$MOD_MEGASTRUCTURE_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+0.5%§!\n"
+
+ trait_tec_robot_climate_adaptation:0 "Climatic Recalibration"
+ trait_tec_robot_climate_adaptation_desc:0 "§LTO DO§!"
+ trait_tec_robot_climate_adaptation_effect:0 "TO DO\n"
+
+ trait_tec_robot_climate_reprocessing:0 "Adaptable Reprocessing"
+ trait_tec_robot_climate_reprocessing_desc:0 "§LTO DO§!"
+ trait_tec_robot_climate_reprocessing_effect:0 "TO DO\n"
+
+ trait_tec_robot_self_processing:0 "Sudo-Ego Depuration"
+ trait_tec_robot_self_processing_desc:0 "§LTO DO§!"
+ trait_tec_robot_self_processing_effect:0 "Remove processing capacity usage from pops\nEnergy usage from pops +1\n"
 
  trait_tec_robot_good_processing:0 "Interdependent Depuration"
- trait_tec_robot_good_processing_desc:0 "§Likea?§!"
- trait_tec_robot_good_processing_effect:0 "TO DO"
+ trait_tec_robot_good_processing_desc:0 "§LTO DO§!"
+ trait_tec_robot_good_processing_effect:0 "Pop Processing capacity usage: -15%"
 
  trait_tec_robot_bad_processing:0 "Reiterative Depuration"
- trait_tec_robot_bad_processing_desc:0 "§Likea?§!"
- trait_tec_robot_bad_processing_effect:0 "TO DO"
+ trait_tec_robot_bad_processing_desc:0 "§LTO DO§!"
+ trait_tec_robot_bad_processing_effect:0 "Pop Processing capacity usage: +15%"
 
- trait_tec_robot_todo:0 "Modular Deployment"
- trait_tec_robot_todo_desc:0 "§Likea?§!"
- TRAIT_TEC_ROBOT_todo_EFFECT:0 "New colonies will gain §Y1§! additional £pop£ Pop.\nPop Housing usage: §G-10%§!"
+ trait_tec_robot_todo:0 "TO DO"
+ trait_tec_robot_todo_desc:0 "§LTO DO?§!"
+ TRAIT_TEC_ROBOT_todo_EFFECT:0 "TO DO"
+
+# --------------- MACHINE PROCESSING ----------------------
+ sr_tec_machine_processing:0 "Processing Capacity"
+ sr_tec_machine_processing_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and depured, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
+
+ sr_tec_machine_redirection:0 "Redirected Processing"
+ sr_tec_machine_redirection_desc:0 "Several protocols have been redirected to empower the planet processing relays, providing specifically charged packets of processing capacity, increasing the output at a local scale."
+
+ building_tec_machine_intranetwork:0 "Intra-Network Core"
+ building_tec_machine_intranetwork_desc:0 "TO DO."
+ building_tec_machine_intranetwork_effect:0 "This £building£ serves as a repeater for the planet £sr_tec_machine_processing£ §Y$sr_tec_machine_processing$§!, exporting its production overflow to the §HCollective§! as a £strategic£ §YUsable resource§! via policies and edicts"
+
+ building_tec_machine_exonetwork:0 "Exo-Network Core"
+ building_tec_machine_exonetwork_desc:0 "TO DO."
+ building_tec_machine_exonetwork_effect:0 "This £building£ serves as a conduit for the planet £sr_tec_machine_processing£ §Y$sr_tec_machine_processing$§!, converting it into £sr_tec_machine_redirection£ §Y$sr_tec_machine_redirection$§!, boosting local £pop£ §HDrone§! and £engineering£ §HAutomation§! §YOutput§!"
+
+
+
+
+
 
 # --------------- BIOLOGICAL PATH TRAITS ----------------------
 # xenotransplantation
@@ -1259,6 +1326,9 @@
  TEC_VOIDCACHE_STARBASE_MEGASTRUCTURE_DETAILS:0 "To do"
 # /
 
+# Probability engine - hyper jumpdrive at no negative
+
+# /
 
 trait_tec_test_scripvar:0 "TEST"
 TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
