--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -623,12 +623,14 @@
 # Ecology
 # ------------------------------------------------------------
  tradition_tec_ecology:0 "Sustainability"
- tradition_tec_ecology_desc:0 "Boundaries are no more, and limits are idealized ideals, so our grasp, our thoughts, must be put in what lies beyond."
+ tradition_tec_ecology_desc:0 "TO DO."
 
- tr_tec_ecology_adopt:0 "Sustainability"
+	# to do
+ tr_tec_ecology_adopt:0 "$tradition_tec_ecology$ Traditions"
  tr_tec_ecology_adopt_tooltip:7 "TO DO.\n"
 
- tr_tec_ecology_finish:0 "Sustainability Traditions Finished"
+	# Unlocks terraformer building
+ tr_tec_ecology_finish:0 "$tradition_tec_ecology$ Traditions Finished"
  tr_tec_ecology_finish_tooltip:4 "TO DO\n"
  tr_tec_ecology_finish_effect:4 ""
 
@@ -640,6 +642,82 @@
  tr_tec_ecology_1_lithoid:0 "Habitational Geodification"
  tr_tec_ecology_1_lithoid_tooltip:0 "TO DO."
  tr_tec_ecology_1_lithoid_delayed:0 "TO DO."
+
+	# Resource reprocessing buildings increase the amount of available districts and extra job output
+ tr_tec_ecology_2:0 "Ecological Reprocessing"
+ tr_tec_ecology_2_tooltip:0 "TO DO."
+ tr_tec_ecology_2_delayed:0 "£building£ §YResource reprocessing buildings§! (such as £building£ Mineral Purification Plant or £building£ Food Processing Facilities) increase the available £district£ §YDistricts§! of its respective £trigger_tec_basic_resources£ Resource by §G3§! on §HNormal§! habitable worlds.\nOn §HArtificial§!, §HArcology§! or §HUncapped§! worlds, they provide §G+10%§! resouce production for its respective resource."
+
+ tr_tec_ecology_3:0 "TO DO"
+ tr_tec_ecology_3_tooltip:0 "TO DO."
+ tr_tec_ecology_3_delayed:0 "TO DO."
+
+ tr_tec_ecology_4:0 "TO DO"
+ tr_tec_ecology_4_tooltip:0 "TO DO."
+ tr_tec_ecology_4_delayed:0 "TO DO."
+
+ tr_tec_ecology_5:0 "TO DO"
+ tr_tec_ecology_5_tooltip:0 "TO DO."
+ tr_tec_ecology_5_delayed:0 "TO DO."
+
+	tr_tec_ecology_6_a:0 "TO DO name"
+	tr_tec_ecology_6_a_tooltip:0 "TO DO effect"
+	tr_tec_ecology_6_a_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+
+	tr_tec_ecology_6_b:0 "TO DO name"
+	tr_tec_ecology_6_b_tooltip:0 "TO DO effect"
+	tr_tec_ecology_6_b_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+
+	tr_tec_ecology_6_c:0 "TO DO name"
+	tr_tec_ecology_6_c_tooltip:0 "TO DO effect"
+	tr_tec_ecology_6_c_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+
+
+# Industry
+# ------------------------------------------------------------
+ tradition_tec_industry:0 "Production"
+ tradition_tec_industry_desc:0 "TO DO."
+
+	# Unlocks a building that eat amenities and increases production
+ tr_tec_industry_adopt:0 "$tradition_tec_industry$ Traditions"
+ tr_tec_industry_adopt_tooltip:7 "TO DO.\n"
+
+	# Unlocks planetfracking
+ tr_tec_industry_finish:0 "$tradition_tec_industry$ Traditions Finished"
+ tr_tec_industry_finish_tooltip:4 "TO DO\n"
+ tr_tec_industry_finish_effect:4 ""
+
+ tr_tec_industry_1:0 "TO DO"
+ tr_tec_industry_1_tooltip:0 "TO DO."
+ tr_tec_industry_1_delayed:0 "TO DO."
+
+ tr_tec_industry_2:0 "Unstoppable Progress"
+ tr_tec_industry_2_tooltip:0 "TO DO."
+ tr_tec_industry_2_delayed:0 "TO DO."
+
+ tr_tec_industry_3:0 "TO DO"
+ tr_tec_industry_3_tooltip:0 "TO DO."
+ tr_tec_industry_3_delayed:0 "TO DO."
+
+ tr_tec_industry_4:0 "TO DO"
+ tr_tec_industry_4_tooltip:0 "TO DO."
+ tr_tec_industry_4_delayed:0 "TO DO."
+
+ tr_tec_industry_5:0 "TO DO"
+ tr_tec_industry_5_tooltip:0 "TO DO."
+ tr_tec_industry_5_delayed:0 "TO DO."
+
+	tr_tec_industry_6_a:0 "TO DO name"
+	tr_tec_industry_6_a_tooltip:0 "TO DO effect"
+	tr_tec_industry_6_a_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+
+	tr_tec_industry_6_b:0 "TO DO name"
+	tr_tec_industry_6_b_tooltip:0 "TO DO effect"
+	tr_tec_industry_6_b_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+
+	tr_tec_industry_6_c:0 "TO DO name"
+	tr_tec_industry_6_c_tooltip:0 "TO DO effect"
+	tr_tec_industry_6_c_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
 
 # --------------------------- ASCENSION T1 --------------------------------
