Prefixed our district and pop category overwrites to take prio over mods, adjusted all tox traits to new upkeep system, updated zombie trait to reduce/negate base upkeep

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -432,8 +432,8 @@
  TRAIT_LITHOID_SCINTILLATING_EFFECT:1 "Each pop working as a slave or better produces 0.05 £rare_crystals£ §Y$rare_crystals$§! per month."
  TRAIT_LITHOID_VOLATILE_EXCRETIONS_EFFECT:1 "Each pop working as a slave or better produces 0.05 £volatile_motes£ §Y$volatile_motes$§! per month."
 
-
-
+ # Zombie
+ TRAIT_ZOMBIE_EFFECT: "Cannot generate §YLeaders§!\nCannot be employed in §Y$pop_cat_ruler$§! or §Y$pop_cat_specialist$§! Jobs"
  # Inorganic Buff
  inorganic_breath_tooltip:1 "Each pop working as a slave or better produces 0.05 £exotic_gases£ §Y$exotic_gases$§! per month."
 
